--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
 	<body>
 		<h1>What are you looking for?</h1>
 		<form id='search_form'>
-			<input type='text' id='npi' name='npi'></input>
+		<!-- 	<input type='text' id='npi' name='npi'></input> -->
+			<input type='text' id='zip' name='zipcode'></input>
 			<button type='submit' id='get-doctors'>Search</button>
 		</form>
 
