successfully queries by zipcode and treatment code

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 		<h1>What are you looking for?</h1>
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
-			<input type='text' id='zip' name='zipcode'></input>
+			Zipcode: <input type='text' id='zip' name='zipcode'></input>
+			HSPCS code:<input type='text' id='hspcs-code' name='hspcs-code'></input>
 			<button type='submit' id='get-doctors'>Search</button>
 		</form>
 
