App now displays relative cost given an hcpcs code.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
 			Zipcode: <input type='text' id='zip' name='zipcode'></input>
-			HSPCS code:<input type='text' id='hspcs-code' name='hspcs-code'></input>
+			HCPCS code:<input type='text' id='hcpcs-code' name='hcpcs-code'></input>
 			<button type='submit' id='get-doctors'>Search</button>
 		</form>
 
