--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
     <head>
         <title>WhichDoctor</title>
         <script src="/static/jquery.js"></script>
-        <link rel="stylesheet" src="/static/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/static/css/bootstrap.css" />
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-static-top">
