--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
 			Zipcode: <input type='text' id='zip' name='zipcode'></input>
-			HCPCS code:<input type='text' id='hcpcs-code' name='hcpcs-code'></input>
+			Type of Doctor: <input type='text' id='specialty' name='specialty'></input>
 			<button type='submit' id='get-doctors'>Search</button>
 		</form>
 
