--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,9 @@
     <head>
         <title>WhichDoctor</title>
         <script src="/static/jquery.js"></script>
+        <script type="text/javascript" src="/static/jquery.tablesorter.js"></script> 
         <link rel="stylesheet" href="/static/css/bootstrap.css" />
+        <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-static-top">
@@ -10,10 +12,12 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">WhichDoctor</a>
                 </div>
+                <a class="navbar-right navbar-brand" href="/" id='start-over'>Start Over</a>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
+        <!--             <button class="nav navbar-nav navbar-right" class="btn btn-lg btn-default" id='start-over'>Start Over</button> -->
+<!--                     <ul class="nav navbar-nav navbar-right">
                         <li> here's a list item in the nav bar!</li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
