--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 {% block body %}
 
 		<h1>What are you looking for?</h1>
+
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
 			Zipcode: <input type='text' id='zip' name='zipcode'></input>
 			Type of Doctor: <input type='text' id='specialty' name='specialty'></input>
-			<button type='submit' id='get-doctors'>Search</button>
+			<button type='submit' class="btn btn-primary" id='get-doctors'>Search</button>
 		</form>
 
 		<div id='display-doctors'>
