--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,10 +1,10 @@
 <html>
-	<table class="table table-striped" id='drtable'>
+	<table class="table table-striped tablesorter" id='drtable'>
        <thead>
           <tr>
-             <th>Doctor</th>
-             <th>Specialty</th>
-             <th>Relative Cost</th.
+             <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Doctor</th>
+             <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Specialty</th>
+             <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Relative Cost</th>
           </tr>
        </thead>
        <tbody>
@@ -21,4 +21,13 @@
           
          </tbody>
     </table>
+    <script>
+
+      $(document).ready(function() 
+        { 
+          $("#drtable").tablesorter(); 
+        } 
+      ); 
+      
+    </script>
 </html>
