app now returns dr's zscore

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -14,7 +14,7 @@
             <tr>
                 <td> <a href="/provider?id={{ doctor.npi }}"> {{ doctor.givenname }} {{ doctor.surname }}{% if doctor.credential %}, {{ doctor.credential }} {% endif %}</a> </td>
                 <td> {{ doctor.specialty }} </td>
-                <td> {{ doctor.rel_cost }} %</td>
+                <td> {{ doctor.zscore }} %</td>
             </tr>
           
           {% endfor %}
