--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
 			Zipcode: <input type='text' id='zip' name='zipcode'></input>
 			Type of Doctor: <input type='text' id='specialty' name='specialty'></input>
+			Procedure: <input type='text' id='procedure' name='procedure'></input>
 			<button type='submit' class="btn btn-primary" id='get-doctors'>Search</button>
 		</form>
 
