--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
 
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
-			Zipcode: <input type='text' id='zip' name='zipcode'></input>
-			Type of Doctor: <input type='text' id='specialty' name='specialty'></input>
-			Procedure: <input type='text' id='procedure' name='procedure'></input>
+			<input type='text' id='zip' name='zipcode' placeholder="Zipcode"></input>
+			<input type='text' id='specialty' name='specialty' placeholder="Cardiologist, x-ray..."></input>
 			<button type='submit' class="btn btn-primary" id='get-doctors'>Search</button>
 		</form>
 
