--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
 			<input type='text' id='zip' name='zipcode' placeholder="Zipcode"></input>
-			<input type='text' id='specialty' name='specialty' placeholder="Cardiologist, x-ray..."></input>
+			<input type='text' id='search-terms' name='search-terms' placeholder="Cardiologist, x-ray..."></input>
 			<button type='submit' class="btn btn-primary" id='get-doctors'>Search</button>
 		</form>
 
