map now displays on left side of page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
         <title>WhichDoctor</title>
         <script src="/static/jquery.js"></script>
         <script type="text/javascript" src="/static/jquery.tablesorter.js"></script> 
+        <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
+        <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
         <link rel="stylesheet" href="/static/css/bootstrap.css" />
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
     </head>
