--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,52 +1,72 @@
 <html>
-	<table class="table table-striped tablesorter" id='drtable'>
-       <thead>
-          <tr>
-             <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Doctor</th>
-             <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Specialty</th>
-             <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Relative Cost</th>
-          </tr>
-       </thead>
-       <tbody>
 
-          {% for doctor in doctor_list %}
+   
+  <div id="allresults" class="container">
+    <div id="map-panel" class="col-md-5" style="height: 400px;"><!-- style="height: 100px;" --></div> 
+    <div id="results-table" class="col-md-7">
+      <table class="table table-striped tablesorter" id='drtable'>
+           <thead>
+              <tr>
+                 <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Doctor</th>
+                 <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Specialty</th>
+                 <th><span class="glyphicon glyphicon-sort" aria-hidden="true"></span>   Cost</th>
+              </tr>
+           </thead>
+           <tbody>
 
-            <tr>
-                <td> <a href="/provider?id={{ doctor.npi }}"> {{ doctor.givenname }} {{ doctor.surname }}{% if doctor.credential %}, {{ doctor.credential }} {% endif %}</a> </td>
-                <td> {{ doctor.specialty }} </td>
-                <td class="dollaz {{doctor.numdollars}}"> {{ doctor.dollars }} </td>
-            </tr>
-          
-          {% endfor %}
-          
-         </tbody>
-    </table>
+              {% for doctor in doctor_list %}
+
+                <tr>
+                    <td> <a href="/provider?id={{ doctor.npi }}"> {{ doctor.givenname }} {{ doctor.surname }}{% if doctor.credential %}, {{ doctor.credential }} {% endif %}</a> </td>
+                    <td> {{ doctor.specialty }} </td>
+                    <td class="dollaz {{doctor.numdollars}}"> {{ doctor.dollars }} </td>
+                </tr>
+              
+              {% endfor %}
+              
+             </tbody>
+      </table>
+    </div>
+  </div>
     <script>
 
-          $.tablesorter.addParser({ 
-          // set a unique id 
-            id: 'numdollars', 
-            is: function(s) { 
-              // return false so this parser is not auto detected 
-              return false; 
-            }, 
-            format: function(s) { 
-              // format your data for normalization 
-              return s.replace('$$$$$',5).replace('$$$$',4).replace('$$$',3).replace('$$',2).replace('$',1); 
-            }, 
-            // set type, either numeric or text 
-            type: 'numeric' 
-          }); 
+      function drawMap(){
 
-        $(document).ready(function() 
-          { 
-            $("#drtable").tablesorter({
+        console.log("drawMap got called!")
 
-              headers: { 
-                2: { 
-                    sorter:'numdollars' 
-                } 
+        L.mapbox.accessToken = 'TOKEN';
+
+        var map = L.mapbox.map('map-panel', 'sarajulia.k9kblj6l').setView([37.769, -122.459], 13);
+      }
+
+      $.tablesorter.addParser({ 
+        // set a unique id 
+        id: 'numdollars', 
+        is: function(s) { 
+          // return false so this parser is not auto detected 
+          return false; 
+        }, 
+        format: function(s) { 
+          // format your data for normalization 
+          return s.replace('$$$$$',5).replace('$$$$',4).replace('$$$',3).replace('$$',2).replace('$',1); 
+          }, 
+          // set type, either numeric or text 
+          type: 'numeric' 
+        }); 
+
+
+
+      $(document).ready(function() 
+        { 
+          drawMap();
+
+          $("#drtable").tablesorter({
+
+            headers: { 
+              2: { 
+               sorter:'numdollars' 
               } 
+            } 
 
             }); 
           } 
