--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,11 @@
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
     </head>
     <body>
+
+<!--         These script tags were for clustering
         <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
         <link href='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
-        <link href='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+        <link href='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' /> -->
 
         <div class="navbar navbar-inverse navbar-static-top">
             <div class="container">
