--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <script type="text/javascript" src="/static/jquery.tablesorter.js"></script> 
         <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
         <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
+        <!-- <script src="microevent.js"></script> -->
         <link rel="stylesheet" href="/static/css/bootstrap.css" />
         <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
     </head>
