each provider gets their own map.

--- a/templates/provider_page.html
+++ b/templates/provider_page.html
@@ -1,15 +1,63 @@
 {% extends 'base.html' %}
 {% block body %}
 
-<div class='provider-card' id='provider-card'>
-<h3>
-	{{ provider.givenname }} {{ provider.surname }}{% if provider.credential %}, {{ provider.credential }} {% endif %} <br>
-	{{ provider.addy1 }} <br>
-	{% if provider.addy2 %}{{provider.addy2}} <br> {% endif %} 
-	{{ provider.city }}, {{ provider.state }}<br>
-	{{ provider.short_zip }}
-</h3>
+<div id="provider-info" class="container">
+    <div id="map-panel" class="col-md-5" style="height: 400px; padding: 10px;"><!-- style="height: 100px;" --></div> 
+	<div class='provider-card' id='provider-card' style="text-align: center;">
+		<h3>
+		{{ provider.givenname }} {{ provider.surname }}{% if provider.credential %}, {{ provider.credential }} {% endif %} <br>
+		{{ provider.addy1 }} <br>
+		{% if provider.addy2 %}{{provider.addy2}} <br> {% endif %} 
+		{{ provider.city }}, {{ provider.state }}<br>
+		{{ provider.short_zip }}
+		</h3>
+	</div>
 </div>
 
+   <script>
+
+      //var events = new MicroEvent();
+
+      function drawMap(){
+
+        //alert("drawMap is called");
+        console.log("drawMap got called!");
+        console.log({{provider.dollars}})
+
+        L.mapbox.accessToken = 'pk.eyJ1Ijoic2FyYWp1bGlhIiwiYSI6Imw5YlJaYmsifQ.6MhrXBPE3xp8hu3Nqbk4iQ';
+
+        var map = L.mapbox.map('map-panel', 'sarajulia.k9kblj6l',
+            {scrollWheelZoom: false});
+
+        var pinLayer = L.mapbox.featureLayer({
+	    // this feature is in the GeoJSON format: see geojson.org
+	    // for the full specification
+		  type: 'Feature',
+		  geometry: {
+	        type: 'Point',
+	        // coordinates here are in longitude, latitude order 
+	        coordinates: [
+                {{ provider.lng }}, {{provider.lat }} 
+              ]
+	   	  },
+	      properties: {
+	       	title: "{{ provider.givenname }} {{provider.surname }}{% if provider.credential %}, {{provider.credential }} {% endif %}",
+            description: "{{provider.addy1 }} {% if provider.addy2 %} {{provider.addy2 }} {% endif %} {{provider.city }}, {{provider.state }} {{provider.short_zip }}",
+              // https://www.mapbox.com/foundations/an-open-platform/#simplestyle
+              'marker-size': 'small',
+              'marker-color': "#FFFF00",
+              'marker-line-color': '#2E2E2E',
+              'marker-allow-overlap': false,
+	      }
+		}).addTo(map);
+
+        map.fitBounds(pinLayer.getBounds());
+
+        return map;
+      }
+
+      drawMap();
+
+    </script>
 
 {% endblock %}
