--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
         <title>WhichDoctor</title>
         <script src="/static/jquery.js"></script>
         <script type="text/javascript" src="/static/jquery.tablesorter.js"></script> 
+        <script type="text/javascript" src="/static/jquery.sticky.js"></script> 
         <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
         <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
         <!-- <script src="microevent.js"></script> -->
