--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
 
 		<form id='search_form'>
 		<!-- 	<input type='text' id='npi' name='npi'></input> -->
+			<input style="width: 500px" type='text' id='search-terms' name='search-terms' placeholder="Cardiologist, x-ray..."></input>
 			<input type='text' id='zip' name='zipcode' placeholder="Zipcode"></input>
-			<input type='text' id='search-terms' name='search-terms' placeholder="Cardiologist, x-ray..."></input>
 			<button type='submit' class="btn btn-primary" id='get-doctors'>Search</button>
 		</form>
 
